--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     max-width: 200px;
     position: fixed;
     top: 0;
-    right: -450px;;
+    right: -450px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -85,11 +85,11 @@ nav{
     align-items: center;
     color: white;
 }
-.logo{
-    width: 140px;
-    position: absolute;
-    top: 20px;
-    left: 20px;
+.title{
+    font-size: 1.8rem;
+    color: white;
+    margin-right: auto;
+    font-style: oblique;
 }
 
 .video{
@@ -100,15 +100,15 @@ nav{
 
 }
 
-.menu ul li{
-    display: inline-block;
+.nav-links{
+    display: flex;
+    gap: 20px;
     list-style: none;
-    margin: 10px 20px;
-    margin-left: 200px;
-    margin-top: 30px;
+    margin: 0;
+    padding: 0;
 }
 
-.menu ul li a{
+.nav-links li a{
     display: inline-block;
     color: #ffff;
     text-decoration: none;
@@ -116,7 +116,7 @@ nav{
     position: relative;
 }
 
-.menu ul li a::after{
+.nav-links li a::after{
     content: '';
     width: 0;
     height: 3px;
@@ -127,6 +127,201 @@ nav{
     transition: 0.5s;
 }
 
-.menu ul li a:hover::after{
+.nav-links li a:hover::after{
     width: 100%;
 }
+
+#hero-table{
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 50px;
+    border: 1px solid #00ffff;
+    display: none;
+}
+
+th, td{
+    padding: 10px;
+    border: 1px solid #666;
+    text-align: center
+}
+
+img{
+    width: 40px;
+    height: 40px;
+}
+
+
+.intro{
+    margin: 0 auto;
+    display: grid;
+    /* create two columns each taking an equal fraction */
+    grid-template-columns: 200px 200px 200px 200px;
+    grid-template-rows: 200px 200px;
+    gap: 1em;
+    grid-template-areas:
+    "box-1 box-2 box-2 box-3"
+    "box-1 box-4 box-5 box-5";
+    /* horizontally centers the grid */
+    justify-content: center;
+    align-content: center;
+}
+
+.grid-item{
+    padding: 15px;
+    border: 1px solid #ccc;
+    background-color: cyan;
+    text-align: center;
+    
+}
+
+#emblems{
+    display: none;
+}
+
+#emblems p{
+    border:#00ffff solid;
+    font-size: 18px;
+    font-weight: 100;
+    
+}
+
+#emblem-table{
+    display: none;
+}
+
+
+.maincontainer{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
+.thecard{
+    position: relative;
+    width: 250px;
+    height: 320px;
+    margin: 10px;
+    /* need this to flip if not written would be flipping it upside down */
+    transform-style: preserve-3d;
+    transition: all 0.5s ease;
+    display: inline-block;
+    border-radius: 10px;
+}
+
+.thecard:hover{
+    transform: rotateY(180deg);
+}
+
+.thefront{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /* hides the other side */
+    backface-visibility: hidden;
+    background-color: #ffc728;
+    color: #333;
+    text-align: center;
+    font-family: 'zilla slab', sans-serif;
+    border-radius: 20px;
+    font-size: 18x;
+    font-weight: bold;
+}
+
+.theback{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    background: #fafafa;
+    color: #333;
+    text-align: center;
+    font-family: 'zilla slab', sans-serif;
+    border-radius: 20px;
+    font-size: 18x;
+    font-weight: bold;
+    transform: rotateY(180deg);
+    /* adds a scrollbar if texts too large and makes sure that texts are within */
+    overflow-y: auto;
+    box-sizing: border-box;
+}
+
+@property --angle{
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+.thecard::after, .card::before{
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-image: conic-gradient(from var(--angle),transparent 50%, blue);
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    z-index: -1;
+    padding: 3px;
+    border-radius: 10px;
+    animation: 3s spin linear infinite;
+
+}
+
+.card::before{
+    
+    filter: blur(1.5rem);
+    opacity: 0.5;
+}
+
+@keyframes spin{
+    from{
+        --angle: 0deg;
+    }
+    to{
+        --angle: 360deg;
+    }
+}
+
+#tipsntricks{
+    display: none;
+}
+
+#tipsntricks h1{
+    font-size: clamp(2rem, 6vw + 1rem, 5rem);
+    line-height: 1.3;
+    text-align: center;
+    text-transform: uppercase;
+
+    background-image: 
+        linear-gradient(
+            to right,
+            green,
+            blue,
+            yellow,
+            blue,
+            green,
+            red,
+            yellow,
+            blue,
+            green
+        );
+
+
+    background-clip: text;
+    color: transparent;
+    background-size: 200%;
+    animation: animate 2s steps(5) infinite;
+    animation: animate 2s linear infinite;
+    animation: animate 2s ease infinite;
+}
+
+@keyframes animate{
+    from{
+        background-position: 0;
+    }
+    to {
+        background-position: 200%;
+    }
+}
+
