--- a/style.css
+++ b/style.css
@@ -413,3 +413,43 @@ img{
         background-position: 100% 50%;
     }
 }
+
+#price-calculator-container {
+    display: none;
+}
+
+.items-grid{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+    margin-top: 10px;
+
+}
+
+.item-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  text-align: center;
+  background-color: #f7f7f7;
+}
+
+.item-card img {
+  margin-bottom: 5px;
+}
+
+.item-card img:hover{
+    transform: scale(1.1);
+    transition: transform 0.2s;
+    border: 2px solid #2196f3;
+    border-radius: 8px;
+}
+
+.item-card p{
+    color: black;
+    font-weight: bold;
+    margin: 5px 0 0 0 ;
+}
